plugins {
	id 'java'
	id 'checkstyle'
	id 'com.diffplug.spotless' version '8.8.0'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.landit'
version = '0.0.1-SNAPSHOT'
description = 'Landit backend server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

repositories {
	mavenCentral()
}

spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		googleJavaFormat('1.35.0')
	}
}

checkstyle {
	toolVersion = '13.8.0'
	config = resources.text.fromFile('config/checkstyle/google_checks.xml')
	configProperties = ['org.checkstyle.google.severity': 'error']
}

dependencies {
	implementation platform('software.amazon.awssdk:bom:2.48.2')
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:scheduler'
	implementation 'software.amazon.awssdk:sesv2'
	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:4.0.2')
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
	implementation 'io.micrometer:micrometer-registry-otlp'
	implementation 'io.sentry:sentry-logback:8.16.0'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.postgresql:postgresql'
	runtimeOnly 'org.springframework.boot:spring-boot-opentelemetry'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'io.opentelemetry.proto:opentelemetry-proto:1.8.0-alpha'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
	// 여러 Spring 통합 테스트 컨텍스트를 보관하는 테스트 JVM의 힙 부족을 방지한다.
	maxHeapSize = '2g'
	systemProperty 'user.timezone', 'Asia/Seoul'
}

tasks.register('migrateDatabase', JavaExec) {
	group = 'database'
	description = 'Run Flyway migrations against DB_URL.'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.landit.landitbe.FlywayMigrationRunner'
}

tasks.register('migrateAppleUsers', JavaExec) {
	group = 'database'
	description = 'Run one phase of Apple user account migration.'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.landit.landitbe.feature.auth.migration.AppleUserMigrationRunner'
}
